--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "a17d2d74-4023-4ab1-aa92-b9763940ddd7"
 authors = ["kylebrown <kylejbrown17@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
 julia = "1.1"
 
