--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "PolyhedralOverapproximation"
+name = "HierarchicalGeometry"
 uuid = "a17d2d74-4023-4ab1-aa92-b9763940ddd7"
 authors = ["kylebrown <kylejbrown17@gmail.com> and contributors"]
 version = "0.1.0"
