--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,13 @@ authors = ["kylebrown <kylejbrown17@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
-GeometryTypes = "4d00f742-c7ba-57c2-abde-4428a4b178cb"
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
+GraphUtils = "5d4bc1c0-0fb7-11e9-3252-b1aa07358cab"
 LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
+LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
