--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Meshing = "e6723b4c-ebff-59f1-b4b7-d97aa5274f73"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
+Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
