--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,15 @@ version = "0.1.0"
 
 [deps]
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
+ECOS = "e2685f51-7e38-5353-a97d-a921fd2c8199"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 GraphUtils = "5d4bc1c0-0fb7-11e9-3252-b1aa07358cab"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 Meshing = "e6723b4c-ebff-59f1-b4b7-d97aa5274f73"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
