--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 Meshing = "e6723b4c-ebff-59f1-b4b7-d97aa5274f73"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
